Fix_footer_position Mobile Device

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -644,7 +644,7 @@ footer {
   width: 100%;
   z-index: 10;
   position: relative;
-  top: 1018px;
+  top: 986px;
 }
 @media screen and (min-width: 425px) and (max-width: 768px) {
   footer {
