--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -8,7 +8,7 @@ footer{
     width: 100%;
     z-index: 10;
     position: relative;
-    top: 1018px;
+    top: 986px;
     @include media-between("mobile-up", "tablet-up") { 
         top: 1065px;
     }
